@@ -22,6 +22,8 @@ editSelectFuzzy2MenuItem=ctrl 2
 editSelectFuzzy3MenuItem=ctrl 3
 editSelectFuzzy4MenuItem=ctrl 4
 editSelectFuzzy5MenuItem=ctrl 5
+editSelectFuzzyPrevMenuItem=ctrl UP
+editSelectFuzzyNextMenuItem=ctrl DOWN
 
 gotoNextUntranslatedMenuItem=ctrl U
 gotoNextTranslatedMenuItem=ctrl shift U
